add correction bag text - hight and with of picture oh header

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="w-full h-full">
         <div class="w-full h-full lg:h-full lg:bg-leopard lg:bg-cover lg:bg-center">
-          <img class="lg:hidden" src="./img/iguana.jpg" alt="">
+          <img class="h-full w-full bg-cover bg-no-repeat bg-center lg:hidden" src="./img/iguana.jpg" alt="">
         </div>
       </div>
     </div>
@@ -106,45 +106,45 @@
       <p class="text-3xl text-primary font-semibold pb-6 mt-4 dark:text-white">Mejores fotos 2022</p>
       <div class="w-full h-full flex flex-col items-center justify-center space-y-6">
         <div class="w-full h-96 bg-delfin bg-cover bg-center rounded-xl">
-          <p class="CardTitle">Chicago</p>
-          <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+          <p class="CardTitle">Delfín blanco</p>
+          <p class="text-md pl-8 text-white mr-24">25 de septiembre</p>
         </div>
         <div class="lg:grid lg:grid-cols-3 lg:gap-5 lg:w-full w-full space-y-6 lg:space-y-0 lg:space-x-0">
           <div class="w-full h-96 lg:h-auto bg-sapo bg-cover rounded-xl">
-            <p class="CardTitle">Chicago</p>
-            <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            <p class="CardTitle">Rana ojona</p>
+            <p class="text-md pl-8 text-white mr-24">25 de septiembre</p>
           </div>
           <div class="w-full h-96 bg-raton bg-cover rounded-xl">
-            <p class="CardTitle">Chicago</p>
-            <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            <p class="CardTitle">Ratón de montaña</p>
+            <p class="text-md pl-8 text-white mr-24">13 de noviembre</p>
           </div>
           <div class="w-full h-96 bg-pescado bg-cover rounded-xl">
-            <p class="CardTitle">Chicago</p>
-            <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            <p class="CardTitle">Pez globo</p>
+            <p class="text-md pl-8 text-white mr-24">14 de junio</p>
           </div>
           <div class="w-full h-96 bg-elefantito bg-cover rounded-xl">
-            <p class="CardTitle">Chicago</p>
-            <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            <p class="CardTitle">Elefante africano</p>
+            <p class="text-smd pl-8 text-white mr-24">8 de abril</p>
           </div>
           <div class="w-full h-96 bg-fieras bg-cover rounded-xl">
-            <p class="CardTitle">Chicago</p>
-            <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            <p class="CardTitle">Leoparado</p>
+            <p class="text-md pl-8 text-white mr-24">10 de noviembre</p>
           </div>
         </div>
       </div>
     </div>
     <div class=" px-6 w-full my-10 pb-24" id="faqs">
       <div class="flex flex-col space-y-4 w-full">
-        <p class="text-2xl text-primary">Sigue estos consejos para cuidarlos:</p>
+        <p class="text-2xl text-primary dark:text-white">Sigue estos consejos para cuidarlos:</p>
         <div class="md:flex md:justify-evenly w-full ">
-          <div class=" text-gray-600 dark:text-white">
+          <div class=" text-gray-700 dark:text-white">
             <li>Prohibir la caza de animales.</li>
             <li>Evitar la deforestación de bosques.</li>
             <li>Delimitar las áreas protegidas y reservas naturales.</li>
             <li>Evitar la contaminación de los recursos naturales.</li>
             <li>Promover planes para la reproducción en cautiverio.</li>
           </div>
-          <div class=" text-gray-600 dark:text-white">
+          <div class=" text-gray-700 dark:text-white">
             <li>Contribuir a la disminución de la tala de árboles con el reciclaje.</li>
             <li>Respetar las áreas protegidas y reservas naturales.</li>
             <li>Comprar con responsabilidad.</li>
@@ -159,7 +159,7 @@
     <a class="text-md text-white" href="#home"><i class="fa-solid fa-house"></i></a>
     <a class="text-md text-white" href="#recomendadas"><i class="fa-solid fa-image"></i></a>
     <a class="text-md text-white" href="#rentas_destacadas"><i class="fa-solid fa-camera"></i></a>
-    <button id="togglesm" class="text-2xl text-black dark:text-white" ><i class="fa-solid fa-moon"></i></button>
+    <button id="togglesm" class="text-2xl text-gray-700 dark:text-white" ><i class="fa-solid fa-moon"></i></button>
   </div>
   <script src="https://kit.fontawesome.com/c4644f56e1.js" crossorigin="anonymous"></script>
   <script>
